--- a/corona_test3/app/src/main/AndroidManifest.xml
+++ b/corona_test3/app/src/main/AndroidManifest.xml
@@ -33,9 +33,13 @@
         <activity android:name=".MyPathActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+        <service android:name=".MyService"
+            android:enabled="true"
+            android:exported="true"/>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDUUKDsXotIrdQHuK0J1uzQxmawPnOO4eQ"/>
+            android:value="AIzaSyBbF-0_zrOLTh7_V6fJ-b84V9pdryH_7IE"/>
 
     </application>
 
